# rag-workshop

./: .gitignore  README.md  main.py  pyproject.toml  rag-workshop-1.ipynb  rewrite-retrieve-read.ipynb
